namespaces/assetto-corsa/deploy.yaml
---
# Service ClusterIP pour l'accès interne (utilisé par l'Ingress)
apiVersion: v1
kind: Service
metadata:
  name: assetto-server-manager-clusterip
spec:
  type: ClusterIP
  selector:
    app: assetto-server-manager
  ports:
    - name: web
      port: 8772
      targetPort: 8772

---
# Service NodePort pour exposer les ports 9600 (TCP/UDP) et 8081
apiVersion: v1
kind: Service
metadata:
  name: assetto-server-manager-nodeport
spec:
  type: NodePort
  selector:
    app: assetto-server-manager
  ports:
    - name: assetto-tcp
      port: 9600
      targetPort: 9600
      nodePort: 30600
    - name: assetto-udp
      port: 9600
      targetPort: 9600
      nodePort: 30600
      protocol: UDP
    - name: assetto-http
      port: 8081
      targetPort: 8081
      nodePort: 30881
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assetto-server-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assetto-server-manager
  template:
    metadata:
      labels:
        app: assetto-server-manager
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - worker03.kube.edmee.cloud
      securityContext:
        fsGroup: 0
      containers:
        - name: assetto-server-manager
          image: harbor.infra.edmee.cloud/docker/seejy/assetto-server-manager:latest
          securityContext:
            runAsUser: 0  # Exécute le conteneur en tant que root
            runAsGroup: 0
          ports:
            - containerPort: 8772
            - containerPort: 9600
            - containerPort: 9600
              protocol: UDP
            - containerPort: 8081
          volumeMounts:
            - name: config
              mountPath: /home/assetto/server-manager/config.yml
              subPath: config.yml
            - name: data
              mountPath: /home/assetto/server-manager/assetto
      volumes:
        - name: config
          configMap:
            name: assetto-server-manager-config
        - name: data
          persistentVolumeClaim:
            claimName: assetto-server-manager-data

---
# Ingress avec cert-manager pour HTTPS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assetto-server-manager-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-edmee-net
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - assetto.infra.edmee.cloud  # Remplace par ton domaine
      secretName: assetto-server-manager-tls
  rules:
    - host: assetto.infra.edmee.cloud  # Remplace par ton domaine
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: assetto-server-manager-clusterip
                port:
                  number: 8772
